e2e/testdata/gnp-hep-donottrack-database-to-host/policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: dnt-database-to-host
spec:
  selector: role == 'untracked-fw'
  doNotTrack: true
  applyOnForward: true
  types:
    - Ingress
    - Egress
  ingress:
    - action: Deny
      source:
        selector: app == 'database'
    - action: Allow
  egress:
    - action: Allow
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: dnt-normal-companion
spec:
  selector: role == 'untracked-fw'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Deny
      source:
        selector: app == 'database'
    - action: Allow
  egress:
    - action: Allow
